<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EditProfileActivity"
    android:scrollY="100dp">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:contentInsetStart="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/close_image"
                style="@style/toolbar_image"
                android:src="@drawable/ic_close"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                style="@style/toolbar_title"
                android:text="@string/edit_profile2"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/close_image"
                app:layout_constraintTop_toTopOf="parent">
            </TextView>

            <ImageView
                android:id="@+id/save_image"
                style="@style/toolbar_image"
                android:src="@drawable/ic_check"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">
            </ImageView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:civ_border_width="1dp"
        app:civ_border_color="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/android_profile"
        android:layout_marginTop="15dp">
    </de.hdodenhof.circleimageview.CircleImageView>

    <TextView
        android:id="@+id/name_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:labelFor="@id/name_input"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/profile_image"
        android:layout_marginStart="24dp">
    </TextView>

    <EditText
        android:id="@+id/name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/name_label"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:inputType="text">
    </EditText>

    <TextView
        android:id="@+id/username_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="@color/gray"
        android:layout_marginTop="20dp"
        android:labelFor="@id/username_input"
        app:layout_constraintTop_toBottomOf="@id/name_input"
        android:layout_marginStart="24dp">
    </TextView>

    <EditText
        android:id="@+id/username_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/username_label"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:inputType="text">
    </EditText>

    <TextView
        android:id="@+id/website_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/website"
        android:textColor="@color/gray"
        android:layout_marginTop="20dp"
        android:labelFor="@id/website_input"
        app:layout_constraintTop_toBottomOf="@id/username_input"
        android:layout_marginStart="24dp">
    </TextView>

    <EditText
        android:id="@+id/website_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/website_label"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:inputType="text">
    </EditText>

    <TextView
        android:id="@+id/bio_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bio"
        android:textColor="@color/gray"
        android:layout_marginTop="20dp"
        android:labelFor="@id/website_input"
        app:layout_constraintTop_toBottomOf="@id/website_input"
        android:layout_marginStart="24dp">
    </TextView>

    <EditText
        android:id="@+id/bio_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/bio_label"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:inputType="text">
    </EditText>

    <TextView
        android:id="@+id/private_info_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/private_information"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/bio_input"
        android:layout_marginStart="24dp">
    </TextView>

    <TextView
        android:id="@+id/email_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/gray"
        android:layout_marginTop="20dp"
        android:labelFor="@id/email_input"
        app:layout_constraintTop_toBottomOf="@id/private_info_text"
        android:layout_marginStart="24dp">
    </TextView>

    <EditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/email_label"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:inputType="textEmailAddress">
    </EditText>

    <TextView
        android:id="@+id/phone_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:textColor="@color/gray"
        android:layout_marginTop="20dp"
        android:labelFor="@id/phone_input"
        app:layout_constraintTop_toBottomOf="@id/email_input"
        android:layout_marginStart="24dp">
    </TextView>

    <EditText
        android:id="@+id/phone_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/phone_label"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:inputType="phone">
    </EditText>
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>